<?xml version="1.0"?>
<package>
  <name>PeachyBots_ros</name>
  <version>0.0.0</version>
  <description>The software for the PeachyBots robots</description>

  <maintainer email="nburn42@gmail.com">Nathan Burnham</maintainer>

  <license>MIT</license>

  <url type="website">http://peachybots.com</url>
  <url type="repository">http://github.com/PeachyBots/Peachybots_ros</url>


  <author email="info@hello-robo.com">Tim Payne</author>
  <author email="nburn42@gmail.com">Nathan Burnham</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
